--- a/lms/templates/header/navbar-authenticated.html
+++ b/lms/templates/header/navbar-authenticated.html
@@ -14,6 +14,9 @@ from django.utils.translation import ugettext as _
     <li class="open-desktop-view nav-item my-auto">
       <a class="nav-link my-auto explore-courses-authenthicated" href="${marketing_link('COURSES')}">${_('Explore courses')}</a>
     </li>
+     <li class="open-desktop-view nav-item my-auto">
+      <a class="nav-link my-auto my-courses-authenthicated" href="${reverse('dashboard')}">${_("My Courses")}</a>
+    </li>
     <li class="nav-item dropdown my-auto mx-0 ml-xl-3 py-1">
         <%include file="user_dropdown.html"/>
     </li>
@@ -24,8 +27,6 @@ from django.utils.translation import ugettext as _
             <i class="fa fa-bars icon-hide" aria-hidden="true"></i>
         </a>
         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="openMenu">
-            <a class="dropdown-item" href="${reverse('dashboard')}">${_("My Courses")}</a>
-            <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/faq">${_('FAQ')}</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/certificates/validate">${_('Certificate Validation ')}</a>
