refactor: update "my courses" in navbar when user is authenticated instead of user menu

--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -652,6 +652,9 @@ a.nav-link.user-menu:hover,
     .explore-courses-authenthicated{
         display: none;
     }
+    .my-courses-authenthicated{
+        display: none;
+    }
 }
 
 
