--- a/lms/templates/eoldiscussion/_thread_list_template.html
+++ b/lms/templates/eoldiscussion/_thread_list_template.html
@@ -37,11 +37,11 @@
                 <span class="sr">${_("Sort:")}</span>
                 <select class="forum-nav-sort-control">
                     ## Translators: This is a menu option for sorting forum threads
-                    <option value="activity">${_("Por actividad reciente")}</option>
+                    <option value="activity">${_("By recent activity")}</option>
                     ## Translators: This is a menu option for sorting forum threads
-                    <option value="comments">${_("Por mayor actividad")}</option>
+                    <option value="comments">${_("For increased activity")}</option>
                     ## Translators: This is a menu option for sorting forum threads
-                    <option value="votes">${_("Por mayor número de votos")}</option>
+                    <option value="votes">${_("By highest number of votes")}</option>
                 </select>
             </label>
         </div>
