--- a/lms/templates/footer.html
+++ b/lms/templates/footer.html
@@ -56,7 +56,7 @@ linkedin_url = footer_url_config.get('linkedin', '')
       </br>
       <ul class="p-0">
         <li class="fw-bolder d-inline-block">
-          <a href="/honor">${_('Términos y Condiciones')}</a>    -
+          <a href="/honor">${_('Terms and Conditions')}</a>    -
         </li>
         <li class="fw-bolder d-inline-block">
           <a href="/privacy">${_('Privacy Policy')}</a>
