--- a/lms/templates/instructor/instructor_dashboard_2/data_download.html
+++ b/lms/templates/instructor/instructor_dashboard_2/data_download.html
@@ -118,11 +118,11 @@ import urllib
   %if enable_survey :
   <div class='eol_survey_report_analytics-report'>
       <hr>
-      <h4 class="hd hd-4">${_("Analítica de encuestas")}</h4>
+      <h4 class="hd hd-4">${_("Survey analytics")}</h4>
       <p>
           <select name="cb_eol_survey" id="cb_eol_survey" >
           </select>     
-          <input onclick="generate_analytics_report_survey(this)" type="button" name="eol_survey_report_analytics-report" value="${_("Generar")}" data-endpoint="${ survey_url }"/>
+          <input onclick="generate_analytics_report_survey(this)" type="button" name="eol_survey_report_analytics-report" value="${_("Generate")}" data-endpoint="${ survey_url }"/>
       </p>
       <div class="eol_survey_report_analytics-success-msg" id="eol_survey_report_analytics-success-msg"></div>
       <div class="eol_survey_report_analytics-warning-msg" id="eol_survey_report_analytics-warning-msg"></div>
