--- a/lms/templates/instructor/instructor_dashboard_2/instructor_dashboard_2.html
+++ b/lms/templates/instructor/instructor_dashboard_2/instructor_dashboard_2.html
@@ -121,7 +121,7 @@ from openedx.core.djangolib.markup import HTML
                 % if section_data['section_key'] == 'send_email':
                   <li class="nav-item"><button id="send_email_button" onclick="set_send_email_view();" type="button" class="btn-link send_email${' hidden' if is_hidden else ''}" data-section="send_email">${_(dname)}</button></li>
                   % if 'welcome-mail-save' in section_data:
-                    <li class="nav-item"><button id="welcome_mail_button" onclick="set_welcome_mail_view();" type="button" class="btn-link send_email${' hidden' if is_hidden else ''}" data-section="send_email">${_("Correo de bienvenida")}</button></li>
+                    <li class="nav-item"><button id="welcome_mail_button" onclick="set_welcome_mail_view();" type="button" class="btn-link send_email${' hidden' if is_hidden else ''}" data-section="send_email">${_("Welcome mail")}</button></li>
                   % endif
                 % else:
                   <li class="nav-item"><button type="button" class="btn-link ${ section_data['section_key'] }${' hidden' if is_hidden else ''}" data-section="${ section_data['section_key'] }">${_(dname)}</button></li>
