fix: change duplicate question in faq section
- Revolves #37

--- a/lms/templates/static_templates/faq.html
+++ b/lms/templates/static_templates/faq.html
@@ -167,7 +167,7 @@
                 <h2 class="accordion-header" id="headingfaq8">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#faq8" aria-expanded="false" aria-controls="faq8">
-                        ¿Cómo cambio mi nombre y/o contraseña?
+                        ¿OpenUChile puede caducar mi cuenta?
                     </button>
                 </h2>
                 <div id="faq8" class="accordion-collapse collapse" aria-labelledby="faq8"
