fix: fixes different filters in course explorer
- fixes order_by selector to show selection in query
- fixes clear filter adding search_string, classification and category

--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -52,7 +52,7 @@
             <br>
             <div class="list-group">
              <label for="order-select" class="form-label"> ${_('Order')}</label>
-              <select class="form-select" id="order-select" data-facet="order" class="form-check-input">
+              <select class="form-select" id="order-select" data-facet="order_by" class="form-check-input">
                   <option value="newer" data-value="newer" data-text="${_('Newer')}"> ${_('Newer')}</option>
                   <option value="older" data-value="older" data-text="${_('Older')}"> ${_('Older')}</option>
               </select>
