--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -134,6 +134,16 @@
             <div class="explorer-courses-border"></div>
           </div>
         </section>
+        <div id="loadingCircles">
+          <div class="f_circleG" id="frotateG_01"></div>
+          <div class="f_circleG" id="frotateG_02"></div>
+          <div class="f_circleG" id="frotateG_03"></div>
+          <div class="f_circleG" id="frotateG_04"></div>
+          <div class="f_circleG" id="frotateG_05"></div>
+          <div class="f_circleG" id="frotateG_06"></div>
+          <div class="f_circleG" id="frotateG_07"></div>
+          <div class="f_circleG" id="frotateG_08"></div>
+        </div>
         <div id="list-courses"></div>
       </div>
     </div>
