refactor: update how to obtain organizations and categories from import to ajax

--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -81,25 +81,9 @@
             </div>
             <br>
             <label for="organization-select" class="form-label"> ${_('Organizations')}</label>
-            <div class="list-group">
-              <%! from course_classification.helpers import get_all_main_classifications %>
-              %for org in get_all_main_classifications():
-                <label class="list-group-item d-flex" >
-                  <input class="form-check-input me-1" type="checkbox" value="" data-facet="classification" data-value="${org[0]}" data-text="${org[1]}">
-                  ${_(org[1])}
-                </label>
-              %endfor
-            </div>
+            <div  id="organizations"></div>
             <label for="category-select" class="form-label"> ${_('Categories')}</label>
-            <div class="list-group">
-              <%! from course_classification.helpers import get_all_course_categories %>
-              %for category in get_all_course_categories():
-                <label class="list-group-item d-flex" >
-                  <input class="form-check-input me-1" type="checkbox" value="" data-facet="category" data-value="${category[0]}" data-text="${category[1]}">
-                  ${_(category[1])}
-                </label>
-              %endfor
-            </div>
+            <div  id="categories"></div>
           </section>
       </div>
       <div class="col-sm-12 col-md-9" id="section-courses">
