--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -2246,3 +2246,20 @@ body .wrapper-preview-menu .preview-menu {
         margin-right: 1rem;
     }
 }
+@media (max-width: 1000px) {
+    #empty-courses-image{
+        width: 50vw;
+    }
+}
+@media (max-width: 600px) {
+    #empty-courses-message p{
+        font-size: 5vw;
+    }
+}
+
+#empty-courses-message{
+    font-size: 40px;
+    font-weight: 500;
+    color: #494949;
+    opacity: 50%;
+}
